<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UserDetailsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.UserDetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <ImageView
        android:id="@+id/avatarImg"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_margin="16sp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_user_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16sp"
        android:layout_marginEnd="8sp"
        android:hint="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/lastNameEditText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/avatarImg" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16sp"
        android:layout_marginStart="8sp"
        android:hint="@string/last_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toEndOf="@id/nameEditText"
        app:layout_constraintTop_toBottomOf="@id/avatarImg" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="8sp"
        android:hint="@string/_7_000_000_00_00"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginVertical="8sp"
        android:layout_marginStart="16sp"
        android:hint="@string/name_domain_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phoneNumberEditText" />

    <EditText
        android:id="@+id/dateBirthEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp"
        android:hint="@string/_01_01_0001"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <EditText
        android:id="@+id/countryEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp"
        android:layout_marginEnd="8sp"
        android:hint="@string/country"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toStartOf="@id/cityEditText"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/dateBirthEditText" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp"
        android:hint="@string/city"
        android:textSize="16sp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/countryEditText"
        app:layout_constraintTop_toBottomOf="@id/dateBirthEditText" />

    <EditText
        android:id="@+id/aboutHimselfEditText"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_marginTop="16sp"
        android:hint="@string/himself_information"
        android:textSize="16sp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@id/countryEditText"
        app:layout_constraintBottom_toTopOf="@id/clearButton" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintEnd_toStartOf="@id/clearButton"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintStart_toEndOf="@id/resetButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineRight" />

</androidx.constraintlayout.widget.ConstraintLayout>