<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/avatarImg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_user_avatar"
        app:layout_constraintTop_toTopOf="@id/userName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrier"/>

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/userEmail"
        app:layout_constraintEnd_toStartOf="@id/userLastName"
        app:layout_constraintStart_toEndOf="@id/avatarImg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.05" />

    <TextView
        android:id="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_domain_com"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toEndOf="@id/userPhone"
        app:layout_constraintEnd_toStartOf="@id/menuButton"
        app:layout_constraintBottom_toBottomOf="@id/barrier"/>


    <TextView
        android:id="@+id/userLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/last_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/userName"
        app:layout_constraintEnd_toStartOf="@id/menuButton"
        app:layout_constraintBottom_toTopOf="@id/userEmail"/>

    <TextView
        android:id="@+id/userPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_7_000_000_00_00"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toEndOf="@id/avatarImg"
        app:layout_constraintEnd_toStartOf="@id/userEmail"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintHorizontal_bias="0.05"/>

    <!-- menu to manage user -->

    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierAllowsGoneWidgets="true"
        app:barrierDirection="bottom"
        app:barrierMargin="0dp"
        app:constraint_referenced_ids="avatarImg, menuButton, userPhone, userName"/>

</androidx.constraintlayout.widget.ConstraintLayout>